reduced some fc notification intent working